<resources>
    <string name="app_name">My Application</string>
    <string name="description">Description</string>
    <string name="descriptionText">DESCRIPTION</string>
    <string name="near_south_asia">test</string>
    <string name="text">Text</string>
    <string name="name_tv">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="buy">BUY</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="visit">Visit</string>
    <string name="return_tv">Return</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_favorite">Favorite</string>
    <string name="bottom_gift">Gift</string>
    <string name="bottom_more">More</string>
    <string name ="key">AIzaSyCMFCR2-gT3qS5UoM8TuoCNAEfw5Gfnsrk</string>

</resources>