<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".locationUI.BuyTicketPage">

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="196dp"
        android:text="@string/buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_pt" />

    <EditText
        android:id="@+id/user_name_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Ho Tuong"
        android:hint="@string/name_tv"
        app:layout_constraintStart_toEndOf="@+id/user_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/location_name_bt" />

    <EditText
        android:id="@+id/email_address_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:text="socdia07@gmail.com"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintStart_toEndOf="@+id/email_address_tv"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_pt" />

    <TextView
        android:id="@+id/email_address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="37dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_tv" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address_tv" />

    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="45dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_tv" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="175dp"
        android:text="@string/name_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="text"
        android:text="10"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/email_address_pt" />

    <EditText
        android:id="@+id/phone_number_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:text="0911485802"
        android:inputType="textPhonetic"
        android:hint="@string/phone_number"
        app:layout_constraintStart_toEndOf="@+id/phone_number_tv"
        app:layout_constraintTop_toBottomOf="@+id/user_name_pt" />

    <TextView
        android:id="@+id/location_name_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="69dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/month_picker"
        android:layout_width="51dp"
        android:layout_height="76dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buy_button"
        app:layout_constraintStart_toEndOf="@+id/day_picker"
        app:layout_constraintTop_toBottomOf="@+id/age_pt"
        app:layout_constraintVertical_bias="0.017" />

    <NumberPicker
        android:id="@+id/year_picker"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buy_button"
        app:layout_constraintStart_toEndOf="@+id/month_picker"
        app:layout_constraintTop_toBottomOf="@+id/age_pt"
        app:layout_constraintVertical_bias="0.009" />

    <NumberPicker
        android:id="@+id/day_picker"
        android:layout_width="51dp"
        android:layout_height="80dp"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toTopOf="@+id/buy_button"
        app:layout_constraintStart_toEndOf="@+id/visit_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/age_pt"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/visit_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/visit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>
